# puppeteer-rs

./: .gitignore  Cargo.toml  README.md
scripts/: .eslintrc.js  domain.hbs  index.js  mod.hbs  package-lock.json  package.json
scripts/templates/: anyProperty.hbs  arrayProperty.hbs  arrayType.hbs  booleanProperty.hbs  booleanType.hbs  enumProperty.hbs  enumType.hbs  integerProperty.hbs  integerType.hbs  numberProperty.hbs  numberType.hbs  objectAnyType.hbs  objectProperty.hbs  objectType.hbs  refProperty.hbs  stringProperty.hbs  stringType.hbs
src/: lib.rs  viewport.rs
src/browser/: browser_fetcher.rs  connection.rs  context.rs  launch_options.rs  mod.rs  process.rs
src/protocol/: accessibility.rs  animation.rs  application_cache.rs  audits.rs  background_service.rs  browser.rs  cache_storage.rs  cast.rs  console.rs  css.rs  database.rs  debugger.rs  device_orientation.rs  dom.rs  dom_debugger.rs  emulation.rs  fetch.rs  headless_experimental.rs  heap_profiler.rs  indexed_db.rs  input.rs  inspector.rs  io.rs  log.rs  media.rs  memory.rs  mod.rs  network.rs  overlay.rs  page.rs  performance.rs  profiler.rs  runtime.rs  schema.rs  security.rs  service_worker.rs  storage.rs  system_info.rs  target.rs  tethering.rs  (+3 more)
tests/: browser.rs
