[package]
name = "puppeteer"
version = "0.1.0"
authors = ["epigeon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
tokio = { version = "*", features = ["macros"] }
tokio-tungstenite = "*"
futures-util = "*"
regex = "1"

[dev-dependencies]
tokio-test = "*"
