[package]
name = "puppeteer"
version = "0.1.0"
authors = ["epigeon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
tokio = { version = "*", features = ["macros"] }
tokio-tungstenite = "*"
chashmap = "2"
futures-util = "*"
futures = "0.3.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio-test = "*"
